# eva

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: outrider-daily.yml  outrider.yml  tests.yaml
.remyx/: repo_intel.yaml
analysis/eva-bench-stats/: data_perturbations.py  stats_perturbations.py
analysis/perturbations/: README.md  data_perturbations.py  regenerate_perturbation_blocks.py  run_perturbations.py  stats_perturbations.py
apps/: README.md  __init__.py  analysis.py  audio_plots.py  config_editor.py  config_io.py  config_schema.py
configs/: user_behaviors.yaml
configs/agents/: airline_agent.yaml  initial_messages.yaml  itsm_agent.yaml  language_addenda.yaml  medical_hr_agent.yaml
configs/prompts/: judge.yaml  judge_misconception.yaml  simulation.yaml
data/: airline_dataset.json  airline_dataset.jsonl  itsm_dataset.json  itsm_dataset.jsonl  medical_hr_dataset.json  medical_hr_dataset.jsonl
data/airline_scenarios/: 1.1.2.json  1.1.3.json  1.1.4.json  1.1.5.json  1.2.1.json  1.2.2.json  1.2.3.json  1.3.1.json  1.3.2.json  2.1.1.json  2.1.2.json  2.1.6.json  2.2.2.json  2.2.4.json  2.2.5.json  2.3.2.json  2.3.4.json  2.4.1.json  2.4.2.json  3.1.3.json  3.1.5.json  3.3.4.json  4.1.1.json  4.1.2.json  4.1.3.json  4.1.5.json  4.2.1.json  4.2.4.json  4.2.5.json  5.1.1.json  5.1.2.json  5.1.3.json  5.1.5.json  5.2.1.json  5.2.2.json  5.2.5.json  5.2.6.json  6.1.1.json  6.1.4.json  6.3.1.json  (+10 more)
data/itsm_aliases/: adobe_acrobat_pro.json  adobe_creative_cloud.json  alpha_garage.json  central_garage.json  cisco_anyconnect.json  confluence.json  datadog.json  docker_desktop.json  downtown.json  downtown_engineering_center.json  downtown_garage_a.json  downtown_office.json  east_campus.json  east_campus_garage.json  executive_garage.json  figma.json  garage_a.json  garage_b.json  general_garage.json  general_surface_lot.json  harbor_engineering_center.json  headquarters.json  headquarters_east.json  headquarters_garage.json  headquarters_garage_a.json  intellij.json  intellij_idea.json  jira.json  lucidchart.json  main_garage.json  microsoft_365_apps.json  microsoft_365_e3.json  (+10 more)
docs/: README.md  assistant_server_contract.md  data.md  experiment_setup.md  index.html  metric_context.md
scripts/: add_culture_data.py  check_version_bump.py  compute_metrics_on_failed.py  create_elevenlabs_tools.py  migrate_aliases.py  migrate_to_culture_schema.py  refactor_itsm_aliases.py  regen_metric_signatures.py  run_text_only.py
website/: package.json  vite.config.ts
(+454 files in other folders)
